--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compile 'org.springframework.boot:spring-boot-starter-mail'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
