create Role.java, RoleRepository.java, LoginController.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.username=kenny
 spring.datasource.password=silverblueberry
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# session will time out after fifteen minutes
+server.servlet.session.timeout = 15m
+
+# Securing Session Cookies
+# - #
+# browser script won't be able to access the cookie
+server.servlet.session.cookie.http-only = true
+# cookie will be sent only over HTTPS connection
+server.servlet.session.cookie.secure = true
