ERROR - Parameter 2 of constructor in UserService required a bean of type 'org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder' that could not be found.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 
 	compile 'org.springframework.boot:spring-boot-starter-mail'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+
+	compileOnly 'org.projectlombok:lombok:1.18.12'
+	annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 }
 
 test {
