--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:8889/kennymaness
+spring.datasource.url=jdbc:mysql://localhost:8889/kennymaness?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=kenny
 spring.datasource.password=silverblueberry
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -12,6 +12,6 @@ server.servlet.session.timeout = 15m
 # Securing Session Cookies
 # - #
 # browser script won't be able to access the cookie
-server.servlet.session.cookie.http-only = true
+#server.servlet.session.cookie.http-only = true
 # cookie will be sent only over HTTPS connection
-server.servlet.session.cookie.secure = true
+#server.servlet.session.cookie.secure = true
