--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # session will time out after fifteen minutes
-server.servlet.session.timeout = 15m
+#server.servlet.session.timeout = 15m
 
 # Securing Session Cookies
 # - #
